--- a/build.gradle
+++ b/build.gradle
@@ -4,19 +4,30 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-group = 'io.skai'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
 
-repositories {
-	mavenCentral()
+
+bootJar {
+	enabled = false
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+allprojects {
+
+	group = 'io.skai'
+	sourceCompatibility = '17'
+
+	configurations {1
+		compileOnly.extendsFrom annotationProcessor
+		testCompileOnly.extendsFrom annotationProcessor
+		testAnnotaionProcess.extendsFrom annotationProcessor
+	}
+	repositories {
+		mavenCentral()
+		mavenLocal()
+	}
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'org.springframework.boot'
+	apply plugin:'io.spring.dependency-management'
 }
