--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,6 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-
-
 bootJar {
 	enabled = false
 }
@@ -13,9 +11,9 @@ bootJar {
 allprojects {
 
 	group = 'io.skai'
-	sourceCompatibility = '17'
+	sourceCompatibility = '19'
 
-	configurations {1
+	configurations {
 		compileOnly.extendsFrom annotationProcessor
 		testCompileOnly.extendsFrom annotationProcessor
 		testAnnotaionProcess.extendsFrom annotationProcessor
@@ -30,4 +28,5 @@ subprojects {
 	apply plugin: 'java'
 	apply plugin: 'org.springframework.boot'
 	apply plugin:'io.spring.dependency-management'
+	apply from: "$rootProject.projectDir/dependencies.gradle"
 }
