--- a/historical-data/build.gradle
+++ b/historical-data/build.gradle
@@ -1,19 +1,10 @@
-plugins {
-    id 'java'
-}
-
-group = 'io.skai'
-version = 'unspecified'
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-}
+    implementation libs.springBoot
+    implementation libs.dataJdbc
+    compileOnly libs.lombok
+    annotationProcessor libs.lombok
+    implementation libs.openApi
+    implementation libs.mysql
 
-test {
-    useJUnitPlatform()
+    testImplementation libsTest.springTest
 }
