change name and credentials to db

--- a/jooq.gradle
+++ b/jooq.gradle
@@ -29,12 +29,12 @@ task generate {
     GenerationTool.generate(new Configuration()
             .withJdbc(new Jdbc()
                     .withDriver('com.mysql.cj.jdbc.Driver')
-                    .withUrl('jdbc:mysql://localhost:3306/ticket')
-                    .withUser('root')
-                    .withPassword('root'))
+                    .withUrl('jdbc:mysql://localhost:3306/airlines-db')
+                    .withUser('vadim')
+                    .withPassword('12345'))
             .withGenerator(new Generator()
                     .withDatabase(new Database()
-                            .withInputSchema('ticket')
+                            .withInputSchema('airlines-db')
                             .withIncludes('.*')
                             .withExcludes("DATABASECHANGELOG|DATABASECHANGELOGLOCK"))
                     .withGenerate(new Generate()
