--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,26 @@ services:
     image: mysql:latest
     container_name: mysql-db
     environment:
-      MYSQL_DATABASE: ticket
-      MYSQL_USER: root
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_PASSWORD: root
+      MYSQL_DATABASE: airlines-db
+      MYSQL_USER: vadim
+      MYSQL_ROOT_PASSWORD: 12345
+      MYSQL_PASSWORD: 12345
     ports:
       - "3306:3306"
     volumes:
       - my-db:/var/lib/mysql
+
+  mysql-db-test:
+    image: mysql:latest
+    container_name: mysql-testdb
+    environment:
+      MYSQL_DATABASE: airlines-db
+      MYSQL_USER: sa
+      MYSQL_ROOT_PASSWORD: sa
+      MYSQL_PASSWORD: sa
+    ports:
+      - "3307:3306"
+
 
 #  redis:
 #    container_name: "redis"
