--- a/build.gradle
+++ b/build.gradle
@@ -4,29 +4,61 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
-bootJar {
-	enabled = false
-}
+//bootJar {
+//	enabled = false
+//}
 
-allprojects {
-
-	group = 'io.skai'
-	sourceCompatibility = '19'
-
-	configurations {
-		compileOnly.extendsFrom annotationProcessor
-		testCompileOnly.extendsFrom annotationProcessor
-		testAnnotaionProcess.extendsFrom annotationProcessor
-	}
-	repositories {
-		mavenCentral()
-		mavenLocal()
-	}
-}
+//allprojects {
+//
+//	group = 'io.skai'
+//	sourceCompatibility = '19'
+//
+//	configurations {
+//		compileOnly.extendsFrom annotationProcessor
+//		testCompileOnly.extendsFrom annotationProcessor
+//		testAnnotaionProcess.extendsFrom annotationProcessor
+//	}
+//	repositories {
+//		mavenCentral()
+//		mavenLocal()
+//	}
+//
+//	tasks.named('test') {
+//		useJUnitPlatform()
+//	}
+//}
 
 subprojects {
+
+	compileJava {
+		options.compilerArgs = [
+				'-Amapstruct.defaultComponentModel=spring'
+		]
+	}
+
 	apply plugin: 'java'
 	apply plugin: 'org.springframework.boot'
 	apply plugin:'io.spring.dependency-management'
 	apply from: "$rootProject.projectDir/dependencies.gradle"
+}
+
+allprojects {
+	group = 'io.skai'
+	sourceCompatibility = '19'
+
+	configurations {
+		compileOnly {
+			extendsFrom annotationProcessor
+		}
+	}
+	bootJar {
+		enabled = false
+	}
+	tasks.named('test') {
+		useJUnitPlatform()
+	}
+
+	repositories {
+		mavenCentral()
+	}
 }
