--- a/reservation/build.gradle
+++ b/reservation/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation libs.mapstruct
     annotationProcessor libs.mapstructProcessor
     testImplementation libsTest.springTest
+    testImplementation libsTest.assertJ
 }
 buildscript {
     repositories {
