--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,5 +17,6 @@ ext.libs = [
 
 ext.libsTest = [
         'springTest': 'org.springframework.boot:spring-boot-starter-test:3.0.5',
-        'assertJ'   : 'org.assertj:assertj-core:3.24.2'
+        'assertJ'   : 'org.assertj:assertj-core:3.24.2',
+        'hamcrest'  : 'org.hamcrest:hamcrest:2.2'
 ]
