add new dependencies

--- a/historical-data/build.gradle
+++ b/historical-data/build.gradle
@@ -1,10 +1,13 @@
 dependencies {
     implementation libs.springBoot
+    implementation libs.jpa
     implementation libs.dataJdbc
     compileOnly libs.lombok
     annotationProcessor libs.lombok
     implementation libs.openApi
     implementation libs.mysql
+    implementation libs.mapstruct
+    annotationProcessor libs.mapstructProcessor
 
     testImplementation libsTest.springTest
 }
