--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,3 +1,12 @@
+
+//ext {
+//    springBootVersion = '3.0.5'
+//}
+
+//def springBootVersion = '3.0.5'
+
+
+
 ext.libs = [
         'springBoot'          : 'org.springframework.boot:spring-boot-starter-web:3.0.5',
         'jpa'                 : 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.5',
