--- a/jooq.gradle
+++ b/jooq.gradle
@@ -23,7 +23,7 @@ import org.jooq.codegen.GenerationTool
 import org.jooq.meta.jaxb.*
 
 
-task generate {
+tasks.register("generate") {
     println("Hello from generate")
     def outputDirectory = projectDir.toString() + '/src/main/java'
     GenerationTool.generate(new Configuration()
