--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,26 +25,18 @@ services:
     ports:
       - "3307:3306"
 
+  redis:
+    container_name: redis
+    image: 'bitnami/redis:latest'
+    ports:
+      - "6379:6379"
+    environment:
+      - REDIS_APPLICATION_MODE=master
+      - ALLOW_EMPTY_PASSWORD=yes
+    volumes:
+      - redis-data:/data
 
-#  redis:
-#    container_name: "redis"
-#    image: 'redis:alpine'
-#    command: redis-server --requirepass ${REDIS_PASS:-password123}
-#    ports:
-#      - "6379:6379"
-#    volumes:
-#      - redis-data:/data
-#      - redis-conf:/usr/local/etc/redis/redis.conf
-#
-#  zookeeper:
-#    image: confluentinc/cp-zookeeper:latest
-#    environment:
-#      ZOOKEEPER_CLIENT_PORT: 2181
-#      ZOOKEEPER_TICK_TIME: 2000
-#    ports:
-#      -
 
 volumes:
   my-db:
-#  redis-data:
-#  redis-conf:
+  redis-data:
