--- a/reservation/src/main/resources/application.properties
+++ b/reservation/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 #openFeign
 spring.cloud.loadbalancer.ribbon.enable=false
+
+#redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.cache.type=redis
+spring.cache.redis.time-to-live=40000
