--- a/historical-data/build.gradle
+++ b/historical-data/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
     implementation libs.springBoot
-    implementation libs.jpa
     implementation libs.dataJdbc
     compileOnly libs.lombok
     annotationProcessor libs.lombok
@@ -8,6 +7,9 @@ dependencies {
     implementation libs.mysql
     implementation libs.mapstruct
     annotationProcessor libs.mapstructProcessor
+    implementation libs.liquibase
 
     testImplementation libsTest.springTest
+    testImplementation libsTest.assertJ
+    testImplementation libsTest.hamcrest
 }
