SEARCH-0001 added static modifier to constants

--- a/reservation/build.gradle
+++ b/reservation/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation libs.liquibase
     implementation libs.jooq
     implementation libs.jooqCodegen
+    implementation libs.persistancelayer
     implementation libs.feign
     implementation libs.mapstruct
     annotationProcessor libs.mapstructProcessor
