--- a/reservation/build.gradle
+++ b/reservation/build.gradle
@@ -10,7 +10,7 @@ dependencies {
     implementation libs.liquibase
     implementation libs.jooq
     implementation libs.jooqCodegen
-    implementation libs.persistancelayer
+    implementation libs.persistencelayer
     implementation libs.feign
     implementation libs.mapstruct
     annotationProcessor libs.mapstructProcessor
