--- a/reservation/src/main/resources/application.properties
+++ b/reservation/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.cache.type=redis
 spring.cache.redis.time-to-live=40000
+
+#kafka
+spring.kafka.bootstrap-servers=localhost:29092
