--- a/historical-data/src/main/resources/application.properties
+++ b/historical-data/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+#kafka
+spring.kafka.bootstrap-servers=localhost:29092
