--- a/historical-data/src/main/resources/application.properties
+++ b/historical-data/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #kafka
 spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.topic=ticket_topic
+spring.kafka.group-id=groupId
