--- a/historical-data/build.gradle
+++ b/historical-data/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     annotationProcessor libs.mapstructProcessor
     implementation libs.liquibase
     implementation libs.kafka
+    implementation libs.awaitility
 
     testImplementation libsTest.springTest
     testImplementation libsTest.assertJ
