--- a/historical-data/src/test/resources/application-test.properties
+++ b/historical-data/src/test/resources/application-test.properties
@@ -7,3 +7,6 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#kafka
+spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.topic=ticket_topic
