--- a/reservation/src/main/resources/application.properties
+++ b/reservation/src/main/resources/application.properties
@@ -22,3 +22,4 @@ spring.cache.redis.time-to-live=40000
 #kafka
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.topic=ticket_topic
+spring.kafka.group-id=groupId
