SEARCH-0003 added test for DbArchiveService

--- a/reservation/src/main/resources/application.properties
+++ b/reservation/src/main/resources/application.properties
@@ -23,3 +23,4 @@ spring.cache.redis.time-to-live=40000
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.topic=ticket_topic
 spring.kafka.group-id=groupId
+spring.kafka.offset=earliest
