--- a/reservation/src/test/resources/application-test.properties
+++ b/reservation/src/test/resources/application-test.properties
@@ -7,3 +7,7 @@ spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#Kafka testConsumer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
