--- a/reservation/src/main/resources/application.properties
+++ b/reservation/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.topic=ticket_topic
 spring.kafka.group-id=groupId
 spring.kafka.offset=earliest
+#quartz
+using.spring.schedulerFactory=true
+spring.quartz.job-store-type=memory
