--- a/reservation/src/main/resources/application.properties
+++ b/reservation/src/main/resources/application.properties
@@ -27,3 +27,4 @@ spring.kafka.offset=earliest
 #quartz
 using.spring.schedulerFactory=true
 spring.quartz.job-store-type=memory
+cron.expression.every-hour=0 0 0/1 1/1 * ? *
