--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,5 +1,6 @@
 def springBootVersion = '3.0.5'
 def mapstructVersion = '1.5.3.Final'
+def cucumberVersion = '7.12.0'
 
 ext.libs = [
         'springBoot'           : "org.springframework.boot:spring-boot-starter-web:${springBootVersion}",
@@ -24,9 +25,13 @@ ext.libs = [
 ]
 
 ext.libsTest = [
-        'springTest': "org.springframework.boot:spring-boot-starter-test:${springBootVersion}",
-        'assertJ'   : 'org.assertj:assertj-core:3.24.2',
-        'hamcrest'  : 'org.hamcrest:hamcrest:2.2',
-        'awaitility': "org.awaitility:awaitility:4.2.0",
-        'kafkaTest' : "org.springframework.kafka:spring-kafka-test:${springBootVersion}"
+        'springTest'    : "org.springframework.boot:spring-boot-starter-test:${springBootVersion}",
+        'assertJ'       : 'org.assertj:assertj-core:3.24.2',
+        'hamcrest'      : 'org.hamcrest:hamcrest:2.2',
+        'awaitility'    : "org.awaitility:awaitility:4.2.0",
+        'kafkaTest'     : "org.springframework.kafka:spring-kafka-test:${springBootVersion}",
+        'cucumberJava'  : "io.cucumber:cucumber-java:${cucumberVersion}",
+        'cucumberJunit' : "io.cucumber:cucumber-junit-platform-engine:${cucumberVersion}",
+        'cucumberSpring': "io.cucumber:cucumber-spring:${cucumberVersion}",
+        'junitSuite'    : "org.junit.platform:junit-platform-suite-api:1.9.3"
 ]
