--- a/historical-data/src/test/resources/application-test.properties
+++ b/historical-data/src/test/resources/application-test.properties
@@ -10,3 +10,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #kafka
 spring.kafka.bootstrap-servers=localhost:29092
 spring.kafka.topic=ticket_topic
+
+cucumber.url=localhost:8081/api/tickets/user?email=ironman@gmail.com
