--- a/historical-data/build.gradle
+++ b/historical-data/build.gradle
@@ -12,11 +12,11 @@ dependencies {
     annotationProcessor libs.springConfigProcessor
     implementation libsTest.cucumberJava
     implementation libsTest.cucumberSpring
+    implementation libs.feign
 
     testImplementation libsTest.springTest
     testImplementation libsTest.assertJ
     testImplementation libsTest.hamcrest
     testImplementation libsTest.awaitility
     testImplementation libsTest.cucumberJunit
-    testImplementation libsTest.junitSuite
 }
