--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -32,6 +32,5 @@ ext.libsTest = [
         'kafkaTest'     : "org.springframework.kafka:spring-kafka-test:${springBootVersion}",
         'cucumberJava'  : "io.cucumber:cucumber-java:${cucumberVersion}",
         'cucumberJunit' : "io.cucumber:cucumber-junit-platform-engine:${cucumberVersion}",
-        'cucumberSpring': "io.cucumber:cucumber-spring:${cucumberVersion}",
-        'junitSuite'    : "org.junit.platform:junit-platform-suite-api:1.9.3"
+        'cucumberSpring': "io.cucumber:cucumber-spring:${cucumberVersion}"
 ]
