--- a/historical-data/build.gradle
+++ b/historical-data/build.gradle
@@ -10,13 +10,13 @@ dependencies {
     implementation libs.liquibase
     implementation libs.kafka
     annotationProcessor libs.springConfigProcessor
-    implementation libs.cucumberJava
-    implementation libs.cucumberSpring
-    implementation libs.feign
 
     testImplementation libsTest.springTest
     testImplementation libsTest.assertJ
     testImplementation libsTest.hamcrest
     testImplementation libsTest.awaitility
     testImplementation libsTest.cucumberJunit
+    testImplementation libsTest.cucumberJava
+    testImplementation libsTest.cucumberSpring
+    testImplementation libs.feign
 }
